<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input"
        android:layout_width="343dp"
        android:layout_height="781dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <RelativeLayout
            android:id="@+id/text"
            android:layout_width="295dp"
            android:layout_height="71dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031">


            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="107dp"
                android:layout_marginEnd="102dp"
                android:layout_marginBottom="26dp"
                android:fontFamily="@font/dm_serif_inter_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="@style/LoginTextStyle"
                android:textSize="32sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/password_toggle"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/e_mail" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="204dp"
            android:fontFamily="@font/plus_jakarta_sans_variablefont_wght"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/email"
            android:textAppearance="@style/email"
            android:textColor="#333333"
            android:translationY="-2.04sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="224dp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:autofillHints="emailAddress"
            android:textColorHint="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_variablefont_wght"
            android:gravity="top"
            android:labelFor="@+id/password_toggle"
            android:lineSpacingExtra="4sp"
            android:text="@string/senha"
            android:textAppearance="@style/senha"
            android:textColor="#333333"
            android:translationY="-2.04sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/plus_jakarta_sans_variablefont_wght"
            android:gravity="center_vertical"
            android:lineSpacingExtra="9sp"
            android:text="@string/remember_me"
            android:textAppearance="@style/remember_me"
            android:textColor="#333333"
            android:translationY="-1.74sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_toggle" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/esqueciMinhaSenha"
            android:textAppearance="@style/esqueci_minha_senha"
            android:textColor="#1D61E7"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_toggle"
            app:layout_constraintVertical_bias="0.191" />

        <Button
            android:id="@+id/button"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:background="@drawable/button"
            android:clipToOutline="true"
            android:gravity="center"
            android:text="@string/entrar"
            android:textAppearance="@style/ButtonTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.708"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="269dp"
            android:layout_height="98dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/riomobilogocuted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNavigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp"
            android:fontFamily="@font/dm_serif_inter_regular"
            android:text="Cadastre-se"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="196dp"
            android:text="ou faça login com"
            android:fontFamily="@font/plus_jakarta_sans_italic_variable_font_wght"
            android:textColor="@color/common_google_signin_btn_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="116dp"
                app:buttonSize="wide"
                app:colorScheme="light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>